--- a/resources/css/rivera-penalosa-samuel/samuel.css
+++ b/resources/css/rivera-penalosa-samuel/samuel.css
@@ -19,3 +19,5 @@ h2 {text-align: center}
 p {text-align: center;}
 ul {text-align: center}
 ol {text-align: center}
+tr {text-align: center}
+header {background-color: green}
