--- a/resources/css/cadena-garcia-jesus-angel/index.css
+++ b/resources/css/cadena-garcia-jesus-angel/index.css
@@ -5,12 +5,14 @@ header{
 }
 main {
 	text-align: center;
-	background-color: 
+	background-color: white
+	
 
 }
 footer{
 	text-align: center;
 	background: #bfc8be  
+
 }
 
 
